--- a/index.html
+++ b/index.html
@@ -13,148 +13,49 @@
 </head>
 
 <body>
-    <div class="calendar">
-        <button class="calendar__prev-button" type="button"></button>
-        <span class="calendar__title">Январь</span>
-        <button class="calendar__next-button" type="button"></button>
-        <ul class="calendar__date-list">
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">1
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">2
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">3
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">4
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">5
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">6
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">7
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">8
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">9
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">10
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">11
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">12
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">13
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">14
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">15
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">16
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">17
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">18
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">19
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">20
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">21
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">22
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">23
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">24
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">25
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">26
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">27
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">28
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">29
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">30
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">1
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">2
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">3
-                </span>
-            </li>
-            <li class="calendar__date-item">
-                <span class="calendar__date-number">4
-                </span>
-            </li>            
-        </ul>
+    <div class="calendar__overlay">
+        <div class="calendar">
+            <div class="calendar__head">
+                <button class="calendar__prev-month" type="button"></button>
+                <span class="calendar__month">Январь</span>
+                <button class="calendar__next-month" type="button"></button>
+            </div>
+            <button class="calendar__date" type="button">1</button>
+            <button class="calendar__date" type="button">2</button>
+            <button class="calendar__date" type="button">3</button>
+            <button class="calendar__date" type="button">4</button>
+            <button class="calendar__date" type="button">5</button>
+            <button class="calendar__date" type="button">6</button>
+            <button class="calendar__date" type="button">7</button>
+            <button class="calendar__date" type="button">8</button>
+            <button class="calendar__date" type="button">9</button>
+            <button class="calendar__date" type="button">10</button>
+            <button class="calendar__date" type="button">11</button>
+            <button class="calendar__date" type="button">12</button>
+            <button class="calendar__date" type="button">13</button>
+            <button class="calendar__date" type="button">14</button>
+            <button class="calendar__date" type="button">15</button>
+            <button class="calendar__date" type="button">16</button>
+            <button class="calendar__date" type="button">17</button>
+            <button class="calendar__date" type="button">18</button>
+            <button class="calendar__date" type="button">19</button>
+            <button class="calendar__date" type="button">20</button>
+            <button class="calendar__date" type="button">21</button>
+            <button class="calendar__date" type="button">22</button>
+            <button class="calendar__date" type="button">23</button>
+            <button class="calendar__date" type="button">24</button>
+            <button class="calendar__date" type="button">25</button>
+            <button class="calendar__date" type="button">26</button>
+            <button class="calendar__date" type="button">27</button>
+            <button class="calendar__date" type="button">28</button>
+            <button class="calendar__date" type="button">29</button>
+            <button class="calendar__date" type="button">30</button>
+            <button class="calendar__date calendar__next-month-date" type="button">1</button>
+            <button class="calendar__date calendar__next-month-date" type="button">2</button>
+            <button class="calendar__date calendar__next-month-date" type="button">3</button>
+            <button class="calendar__date calendar__next-month-date" type="button">4</button>
+            <button class="calendar__date calendar__next-month-date" type="button">5</button>
+        </div>
     </div>
 </body>
 
