--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </button>
         </div>
         <button class="calendar__date" type="button">1</button>
-        <button class="calendar__date _start _end _active" type="button">2</button>
+        <button class="calendar__date _active _start _end" type="button">2</button>
         <button class="calendar__date" type="button">3</button>
         <button class="calendar__date" type="button">4</button>
         <button class="calendar__date" type="button">5</button>
@@ -142,7 +142,7 @@
             </button>
         </div>
         <button class="calendar__date" type="button">1</button>
-        <button class="calendar__date _start _active" type="button">2</button>
+        <button class="calendar__date _active _start" type="button">2</button>
         <button class="calendar__date _active" type="button">3</button>
         <button class="calendar__date _active" type="button">4</button>
         <button class="calendar__date _active" type="button">5</button>
@@ -151,7 +151,7 @@
         <button class="calendar__date _active" type="button">8</button>
         <button class="calendar__date _active" type="button">9</button>
         <button class="calendar__date _active" type="button">10</button>
-        <button class="calendar__date _end _active" type="button">11</button>
+        <button class="calendar__date _active _end" type="button">11</button>
         <button class="calendar__date" type="button">12</button>
         <button class="calendar__date" type="button">13</button>
         <button class="calendar__date" type="button">14</button>
